test/tests/stages/14_pointers/invalid_types/extra_credit/bitwise_lshift_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(ptr)
  =
  const int(0)
  ;
  int
  identifier(i)
  =
  const int(1000)
  ;
  identifier(i)
  >>
  identifier(ptr)
  ;
  return
  const int(0)
  ;
  }
